@@ -50,10 +50,17 @@ typedef struct _GstXOverlayClass {
   /* virtual functions */
   void (* set_xwindow_id) (GstXOverlay *overlay,
 			   XID          xwindow_id);
+  /* optional virtual functions */
+  void (* get_desired_size) (GstXOverlay *overlay,
+			     guint *width,
+			     guint *height);
   
   /* signals */
   void (*have_xwindow_id) (GstXOverlay *overlay,
                            XID          xwindow_id);
+  void (* desired_size)	  (GstXOverlay *overlay,
+			   guint width,
+			   guint height);
 
   gpointer _gst_reserved[GST_PADDING];
 } GstXOverlayClass;
@@ -62,9 +69,11 @@ GType	gst_x_overlay_get_type		(void);
 
 /* virtual class function wrappers */
 void gst_x_overlay_set_xwindow_id (GstXOverlay *overlay, XID xwindow_id);
+void gst_x_overlay_get_desired_size (GstXOverlay *overlay, guint *width, guint *height);
 
 /* public methods to fire signals */
 void gst_x_overlay_got_xwindow_id (GstXOverlay *overlay, XID xwindow_id);
+void gst_x_overlay_got_desired_size (GstXOverlay *overlay, guint width, guint height);
 
 G_END_DECLS
 
